[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Giovanni Maia <maia.giovanni7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
requests = "^2.32.3"
pandas = "^2.2.3"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
